{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 36,
  "lineage": "e4ff91d4-ee91-294f-50ff-39603da5e7b4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:subnet/subnet-016aeadbcbc9ca90e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Subnet-Public : Public Subnet 1"
                ]
              }
            ],
            "id": "subnet-016aeadbcbc9ca90e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633218236922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017424b4fa92e5a1a",
            "association_id": "eipassoc-0d0bda5c364e00bf8",
            "domain": "vpc",
            "id": "eipalloc-017424b4fa92e5a1a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0dda0be45afb3b1f2",
            "private_dns": "ip-10-0-3-145.ap-south-1.compute.internal",
            "private_ip": "10.0.3.145",
            "public_dns": "ec2-15-206-120-255.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.120.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbb311f7a9393abe",
            "association_id": "eipassoc-05cfb4a1c617b3745",
            "domain": "vpc",
            "id": "eipalloc-0cbb311f7a9393abe",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-028d1683aa5db4e90",
            "private_dns": "ip-10-0-4-57.ap-south-1.compute.internal",
            "private_ip": "10.0.4.57",
            "public_dns": "ec2-43-205-18-247.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.18.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:633218236922:instance/i-00420595df7c58ba6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00420595df7c58ba6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-022524cb222fe682a",
            "private_dns": "ip-10-0-1-18.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bed0e66072624e92",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016aeadbcbc9ca90e",
            "tags": {
              "Name": "EC2 Public Subnet 1"
            },
            "tags_all": {
              "Name": "EC2 Public Subnet 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066c378ed6e1c7ea1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_vpc_mumbai",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Public_Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:internet-gateway/igw-0fe81f170f72d1183",
            "id": "igw-0fe81f170f72d1183",
            "owner_id": "633218236922",
            "tags": {
              "Name": "Public_IG_mumbai"
            },
            "tags_all": {
              "Name": "Public_IG_mumbai"
            },
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "dependencies": [
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017424b4fa92e5a1a",
            "association_id": "eipassoc-0d0bda5c364e00bf8",
            "connectivity_type": "public",
            "id": "nat-0b82b7b22e7c520c2",
            "network_interface_id": "eni-0dda0be45afb3b1f2",
            "private_ip": "10.0.3.145",
            "public_ip": "15.206.120.255",
            "subnet_id": "subnet-0d628a855916b57fc",
            "tags": {
              "Name": "Private NAT gw"
            },
            "tags_all": {
              "Name": "Private NAT gw"
            }
          },
          "dependencies": [
            "aws_eip.aws_eip_mumbai",
            "aws_subnet.aws_private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbb311f7a9393abe",
            "association_id": "eipassoc-05cfb4a1c617b3745",
            "connectivity_type": "public",
            "id": "nat-022cec0e4f758170e",
            "network_interface_id": "eni-028d1683aa5db4e90",
            "private_ip": "10.0.4.57",
            "public_ip": "43.205.18.247",
            "subnet_id": "subnet-0e96e6601748debe4",
            "tags": {
              "Name": "Private NAT gw"
            },
            "tags_all": {
              "Name": "Private NAT gw"
            }
          },
          "dependencies": [
            "aws_eip.aws_eip_mumbai",
            "aws_subnet.aws_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_Private_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:route-table/rtb-090c6836c6877bddf",
            "id": "rtb-090c6836c6877bddf",
            "owner_id": "633218236922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b82b7b22e7c520c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For Jhooq EU Central Project "
            },
            "tags_all": {
              "Name": "RT Private: For Jhooq EU Central Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aws_eip_mumbai",
            "aws_nat_gateway.aws_nat_gateway_mumbai",
            "aws_subnet.aws_private_subnet",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:route-table/rtb-07809185a792a3a40",
            "id": "rtb-07809185a792a3a40",
            "owner_id": "633218236922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022cec0e4f758170e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For Jhooq EU Central Project "
            },
            "tags_all": {
              "Name": "RT Private: For Jhooq EU Central Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aws_eip_mumbai",
            "aws_nat_gateway.aws_nat_gateway_mumbai",
            "aws_subnet.aws_private_subnet",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_Public_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:route-table/rtb-00186703403f5f7e0",
            "id": "rtb-00186703403f5f7e0",
            "owner_id": "633218236922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe81f170f72d1183",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Public: For Jhooq EU Central Project "
            },
            "tags_all": {
              "Name": "RT Public: For Jhooq EU Central Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Public_Internet_Gateway",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assocaition",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08002dda52baef2aa",
            "route_table_id": "rtb-090c6836c6877bddf",
            "subnet_id": "subnet-0d628a855916b57fc"
          },
          "dependencies": [
            "aws_eip.aws_eip_mumbai",
            "aws_nat_gateway.aws_nat_gateway_mumbai",
            "aws_route_table.route_table_Private_mumbai",
            "aws_subnet.aws_private_subnet",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a51d8100c47afb45",
            "route_table_id": "rtb-07809185a792a3a40",
            "subnet_id": "subnet-0e96e6601748debe4"
          },
          "dependencies": [
            "aws_eip.aws_eip_mumbai",
            "aws_nat_gateway.aws_nat_gateway_mumbai",
            "aws_route_table.route_table_Private_mumbai",
            "aws_subnet.aws_private_subnet",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assocaition",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047c760d5fe143cbc",
            "route_table_id": "rtb-00186703403f5f7e0",
            "subnet_id": "subnet-016aeadbcbc9ca90e"
          },
          "dependencies": [
            "aws_internet_gateway.Public_Internet_Gateway",
            "aws_route_table.route_table_Public_mumbai",
            "aws_subnet.aws_public_subnet",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042688b20c01313e4",
            "route_table_id": "rtb-00186703403f5f7e0",
            "subnet_id": "subnet-0e84a3301dd59d83a"
          },
          "dependencies": [
            "aws_internet_gateway.Public_Internet_Gateway",
            "aws_route_table.route_table_Public_mumbai",
            "aws_subnet.aws_public_subnet",
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:security-group/sg-066c378ed6e1c7ea1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066c378ed6e1c7ea1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230601161453302900000001",
            "name_prefix": "terraform-",
            "owner_id": "633218236922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG : vpc-mumbai"
            },
            "tags_all": {
              "Name": "SG : vpc-mumbai"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:subnet/subnet-0d628a855916b57fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d628a855916b57fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633218236922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "dependencies": [
            "aws_vpc.Myvpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:subnet/subnet-0e96e6601748debe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e96e6601748debe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633218236922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "dependencies": [
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:subnet/subnet-016aeadbcbc9ca90e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016aeadbcbc9ca90e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633218236922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "dependencies": [
            "aws_vpc.Myvpc_ap_south_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:subnet/subnet-0e84a3301dd59d83a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e84a3301dd59d83a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633218236922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "vpc_id": "vpc-0aa1b46ae917d9ea7"
          },
          "dependencies": [
            "aws_vpc.Myvpc_ap_south_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Myvpc_ap_south_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633218236922:vpc/vpc-0aa1b46ae917d9ea7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0071ae0c73268b5c0",
            "default_route_table_id": "rtb-09bc739c9bc72ed0b",
            "default_security_group_id": "sg-060c3076622d8b69d",
            "dhcp_options_id": "dopt-0fee82b5e04270a52",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa1b46ae917d9ea7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bc739c9bc72ed0b",
            "owner_id": "633218236922",
            "tags": {
              "Name": "VPC_south_1"
            },
            "tags_all": {
              "Name": "VPC_south_1"
            }
          }
        }
      ]
    }
  ]
}